<resources>

    <string name="api_key_maps">AIzaSyAQKdCn69lTw3OO5z74rMW1s_W1uypZu_k</string>
    <string name="app_name">Party</string>
    <string name="picture_description">Banner do evento</string>
    <string name="favorite_this_event">Favorite esse evento</string>
    <string name="more_details">Mais detelhes</string>
    <string name="locales">LOCAIS</string>
    <string name="locale">LOCAL</string>
    <string name="home">HOME</string>
    <string name="favorites">FAVORITOS</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_out">Sair</string>
    <string name="banner_event">BANNER DO EVENTO</string>
    <string name="value">VALOR</string>
    <string name="date">DATA</string>
    <string name="contact">CONTATO</string>

    <string name="day_singer">Dia %1$s - %2$s</string>
    <string name="price_basic">Entrada pista - R$ %1$s</string>
    <string name="price_basic_value">Entrada pista:</string>
    <string name="price_vip">Entrada VIP - R$ %1$s</string>
    <string name="price_vip_value">Entrada VIP:</string>
    <string name="price_top">Entrada camarote - R$ %1$s</string>
    <string name="price_top_value">Entrada camarote:</string>
    <string name="date_city">%1$s - %2$s</string>
    <string name="date_hours">%1$s a partir de %2$s hora(s) </string>
    <string name="priece">O QUE ROLARÁ POR DIA E PREÇO:</string>
    <string name="who_go">Quem vai</string>
    <string name="chat">Chat</string>
    <string name="i_go">Eu vou</string>
    <string name="tickets">PONTOS COM INGRESSOS:</string>
    <string name="more_info">MAIS DETALHES</string>
    <string name="no_details">SEM DETALHES ADICIONAIS</string>
    <string name="say_email">Nos informe seu email</string>
    <string name="say_us">Nos diga, você está atrás de?</string>
    <string name="events">Baladas</string>
    <string name="events_">Eventos</string>
    <string name="more_options">Mais opções</string>
    <string name="promote_events">Promover eventos</string>
    <string name="create_user">Você não possui cadastro.. Nos confirme alguns dados.</string>
    <string name="all_name">Nome Completo</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="phone">Telefone</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="settings">Configurações</string>
    <string name="out">Sair</string>
    <string name="profile">Meu perfil</string>
    <string name="status">Status</string>
    <string name="adress">Endereço</string>
    <string name="confirm_change">Confirme as alterações</string>
    <string name="image_profile">Imagem do perfil</string>
    <string name="description_event">Descrição do evento</string>
    <string name="date_event">Data</string>
    <string name="time">Horário</string>
    <string name="remove_day">Remover Dia</string>
    <string name="add_day">Adicionar Dia</string>
    <string name="days_event">DIAS DO EVENTO</string>
    <string name="locale_ticket">LOCAIS COM INGRESSO</string>
    <string name="add_locale">ADICIONAR LOCAL</string>
    <string name="remove_locale">Remover local</string>
    <string name="new_event">Novo Evento</string>
    <string name="my_events">Meus Eventos</string>
    <string name="no_event">Nenhuma programação</string>
    <string name="name">Nome da atração</string>
    <string name="image_of_event">IMAGEM DO EVENTO</string>
    <string name="ticketi_time">QUAL O DIA?</string>
    <string name="confirm">Confirmar</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="filter_events">Filtros de eventos</string>
    <string name="sertanejo">Sertanejo</string>
    <string name="samba">Samba</string>
    <string name="rock">Rock</string>
    <string name="mpb">MPB</string>
    <string name="forr">Forró</string>
    <string name="eletr_nica">Eletrônica</string>
    <string name="g_neros">Gêneros</string>
    <string name="maxim">Distância Máxima (em KM)</string>
    <string name="status_active_or_not">Status (Ativo/Inativo)</string>
    <string name="text">Uma Frase</string>
    <string name="no_connection">SEM CONEXÃO, VERIFIQUE E TENTE NOVAMENTE</string>
    <string name="error_invalid_email">EMAIL OU SENHA INCORRETOS, TENTE NOVAMENTE</string>
    <string name="error_invalid_pass">SENHAS DIFERENTES</string>
    <string name="pass_weak">SENHA FRACA</string>
    <string name="error_email_exists">EMAIL JÁ EXISTE</string>
    <string name="error_empty">OBRIGATÓRIO</string>
    <string name="are_welcome">SEJA BEM VINDO</string>
    <string name="update_profile">ATUALIZAÇÃO DE PERFIL</string>
    <string name="update_ok">ATUALIZADO COM SUCESSO</string>
    <string name="update_picture">CONFIRME NO BOTÃO ABAIXO PARA CONCLUIR</string>
    <string name="update_failure">ATUALIZAÇAO NAO REALIZADA</string>
    <string name="ok">OK</string>
    <string name="select_picture">Selecione a foto</string>
    <string name="pass_change">Redefenir senha</string>
    <string name="change_passs">REDEFINIR SENHA</string>
    <string name="text_change_pass">UM EMAIL DE REDEFINIÇÃO DE SENHA FOI ENVIADO PARA %1$s</string>
    <string name="inactive">Inativo</string>
    <string name="active">Ativo</string>
    <string name="one_interest">Você deve possuir pelo menos 1 interesse</string>
    <string name="errror">Erro</string>
    <string name="type_event">TIPO DE EVENTO</string>
    <string name="city">Cidade</string>
    <string name="error_date">Erro na data</string>
    <string name="format_correct">Verifique se o formato da data esta correto, ex: 27/02/1994</string>
    <string name="virg">,</string>
    <string name="field_">Campo obrigatório</string>
    <string name="banner_ok">Banner enviado com sucesso</string>
    <string name="banner_ok_title">Update de Banner</string>
    <string name="update_event">Evento atualizado com sucesso!</string>
    <string name="update_event_title">ATUALIZAÇÃO DE EVENTO</string>
    <string name="error_create_event">Por favor verifique se todos os campos estão preenchidos e tente novamente!</string>
    <string name="error_day_empty">ADICIONE PELO MENOS UM DIA DE EVENTO E TENTE NOVAMENTE</string>
    <string name="error_locale_empty">ADICIONE PELO MENOS UM LOCAL PARA TROCA DE INGRESSO E TENTE NOVAMENTE</string>
    <string name="my_options">Minhas opções</string>
    <string name="upload_picture_text">Seu upload está sendo realizado, aguarde.</string>
    <string name="event_create_title">EVENTO CRIADO</string>
    <string name="event_create">Evento criado com sucesso!</string>
    <string name="help_us">Avise a seus amigos sobre nós</string>
    <string name="help_us_title">LEMBRETE</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="last_event">ULTIMOS EVENTOS VISUALIZADOS</string>
    <string name="error_conected">ERRO AO CONECTAR</string>
    <string name="error_conected_message">VERIFIQUE SUA CONEXÃO E TENTE NOVAMENTE</string>
</resources>
